# mp3-to-chord-chart

.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-project-scaffold/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-audio-loading-and-key-detection/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-beat-tracking-and-chord-detection/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-structural-segmentation/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-upload-handler-and-async-processing/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-lyrics-input-chart-builder-and-api-contract/: 06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: main.py  pyproject.toml
backend/audio/: chart_builder.py  chord_detection.py  key_detection.py  loader.py  models.py  segmentation.py
backend/tests/: test_chord_detection.py  test_segmentation.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  renderChart.js  style.css
(+3 files in other folders)
